calendar preview needs to be fixed. the content is overflowing

--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -13,6 +13,7 @@
 .histogram__top {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 .histogram__title {
