--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -3,7 +3,6 @@
     border: 1px solid var(--Gray-3, #ACB5BD);
     border-radius: 8px;
     padding: 28px 26px 32px;
-    width: 100%;
   }
   
   .calendar__title {
