--- a/06-lection4/01-avatar/avatar.css
+++ b/06-lection4/01-avatar/avatar.css
@@ -10,4 +10,9 @@
     object-fit: cover;
     border-radius: 50%;
   }
+
+  .avatar_lg {
+    width: 160px;
+    height: 160px;
+  }
   
